# Player

./: .gitignore  CMakeLists.txt  CMakeLists_new.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.txt  MANUAL_MPV_INSTALLATION.md  MIGRATION_PLAN.md  MPV_SETUP.md  README.md  build-with-installer.bat  build.bat  convert-icon.ps1  copy-qml-to-build.bat  error_log.txt  example_usage.qml  extract-mpv.bat  install-mpv.md  installer.nsi.in  qml.qrc  qt-update.bat  resources.rc  run-app-debug.bat  run-app-wait.bat  run-app.bat  run-debug-console.bat  setup-mpv-linux.sh  setup-mpv-macos.sh  setup-mpv-windows.bat  update-qml.bat
@win/: README.md  build.bat  build_portable.bat  build_portable_fixed.bat  build_static.bat  clean.bat  copy_dependencies.bat  fix_dependencies.bat  run.bat  setup_ffmpeg.bat  test_prores.bat
MPV_LIBRARY/win/: setup_ffmpeg_dev.bat
MPV_LIBRARY/win/ffmpeg_player_dev/: CMakeLists.txt  main.cpp  setup_env.bat
README/: INSTALL-NSIS.md  auto-mpv.bat
assets/Images/: icon_mac.icns
assets/Images/Drives/: silver_drive_mac.icns
assets/shaders/: svgmask.frag
backups/qml_backup_20250520_151015/: PlayerControls.qml  PlaylistView.qml  TestButtons.qml  VideoOutput.qml  main.qml.bak  qmldir
backups/qml_backup_20250520_151015/components/: IconDisplay.qml  MediaControlButton.qml  TransparentButton.qml
backups/qml_backup_20250520_151015/controls/: ControlBar.qml  StatusBar.qml
backups/qml_backup_20250520_151015/panels/: GeneralSettingsTab.qml  SettingsPanel.qml  VideoArea.qml  VideoSettingsTab.qml
backups/qml_backup_20250520_151015/popups/: ColorPickerDialog.qml  MagnifierTool.qml
backups/qml_backup_20250520_151015/utils/: MediaFunctions.qml  qmldir
batch/: README.md
batch/linux/: README.md  build-app.sh  run-app-debug.sh  run-app.sh  setup-mpv.sh
batch/macos/: README.md  build-app.sh  run-app-debug.sh  run-app.sh  setup-mpv.sh
batch/windows/: README.md  build-ffmpeg-simple.bat  build-ffmpeg.bat  build-with-installer.bat  convert-icon.ps1  extract-mpv.bat  qt-update.bat  run-app-debug.bat  run-app-ffmpeg.bat  run-app.bat  run-debug-console.bat  setup-mpv.bat
build_portable/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_portable/Player-by-HEIMLICH_autogen/: deps
build_portable/Player-by-HEIMLICH_autogen/PRMOGMWJPH/: moc_ffmpegobject.cpp.d
build_portable/Player-by-HEIMLICH_autogen/include/: ffmpegobject.moc.d
build_static/: resources.rc
build_static/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_static/Player-by-HEIMLICH_autogen/: deps  mocs_compilation.cpp
build_static/Player-by-HEIMLICH_autogen/PRMOGMWJPH/: moc_ffmpegobject.cpp.d
build_static/Player-by-HEIMLICH_autogen/include/: ffmpegobject.moc.d  main.moc.d
macos/: Info.plist
qml/: FrameTimelineBar.qml  PlayerControls.qml  PlaylistView.qml  TestButtons.qml  Theme.qml  main.qml  qmldir
qml/controls/: ControlBar.qml  StatusBar.qml
qml/core/: MainWindow.qml  PlayerCore.qml  VideoPlayer.qml
qml/panels/: GeneralSettingsTab.qml  VideoArea.qml  VideoSettingsTab.qml
qml/ui/: CustomFileDialog.qml  CustomScrollBar.qml  IconButton.qml  VideoArea.qml
qml/utils/: MediaFunctions.qml  MediaUtils.qml  ThemeManager.qml  qmldir
qml/widgets/: ControlBar.qml  FrameTimelineBar.qml  ScopePanel.qml  ScopeWindow.qml  SettingsPanel.qml  StatusBar.qml  TimelineBar.qml
src/: FFmpegObject.cpp  FFmpegObject.h  main.cpp  mpvobject.cpp  mpvobject.h  splash.h  timelinesync.cpp  timelinesync.h  videoscoperenderer.cpp  videoscoperenderer.h
src/core/: AudioDecoder.cpp  AudioDecoder.h  FFmpegEngine.cpp  FFmpegEngine.h  VideoDecoder.cpp  VideoDecoder.h  ffmpegobject.cpp  ffmpegobject.h
src/rendering/: VideoRenderer.cpp  VideoRenderer.h
src/utils/: TimecodeUtils.cpp  TimecodeUtils.h
